@@ -26,6 +26,9 @@ DIST genpatches-3.14-29.extras.tar.xz 18236 SHA256 dc72cdb2e4538b919a6069774d405
 DIST genpatches-3.17-6.base.tar.xz 175380 SHA256 22988517302e34da09593a9c05a5ac377ac1357f621e61c7638c8c7c17017c79 SHA512 35cb6ab41563975bc139f91a1d5de6944af51b4bf8cf6201cb685d39419539032918f1a7c9377d94dcd4de1e5015d08b3b50817fef96eaa23fe336f702f34267 WHIRLPOOL f6864f47867871343b8f9261b466c383881314fcdf8a4488964fdbce4c7ed685f3ddfceab71d461027ae4ad2a08f998c3f4ae4ae65f2c8d7d8d5e948dd303907
 DIST genpatches-3.17-6.experimental.tar.xz 59948 SHA256 ad4323baf089ff76fc5d129715d858d61bc8e98a498d4b5e8ee2696eff0f542c SHA512 1b5586e5d1d6f394bd658a81e070c2612365efdb637e72688f65b3fd1f6b209bb9ca70a1c17b6501ba93633e153eac99405e5caf2384e715256867d793ab22a0 WHIRLPOOL 6b193b2a005201a7df1110ba93d6806f96f03c85cb6d8335592ba41108d3c4979ab7b09686f5a26270a1637d497fdda23392333bd657350e9e6b076a7078116b
 DIST genpatches-3.17-6.extras.tar.xz 16156 SHA256 5c87aaa2a20327d0dff2639aab060e483c9e36a7517e14c359c95c98052f0f40 SHA512 ef21b4b7c59e393c5145895bd1d23fad1801baa4512fcdb381a03d9c8c916600f4718621a8aaeca7beda824bc0268f1dd84471158bfc6e3875d450cf034db685 WHIRLPOOL 8ab02a12aa245661376bb99d07b44987bcd3e79e68db78636105412b7c3a1fb269969ff921861a8092ce7a7a71a19789f0e206e097b48e1b6eaa3e10290ef6a3
+DIST genpatches-3.17-7.base.tar.xz 224836 SHA256 2c09c6ca8ed5df1f3e575f6fee9d5f2242608b24d980cdcb1ff576babaee676c SHA512 096a14ed9ba0a7b0cdc8bfc3e9d9df71bdb833c9df065d8ffed822519e77707d3db6bbeb60ba42406fadde5550a9c3181cdbb9e074cf6b28e09d2acdf5aad9c7 WHIRLPOOL a544e7b7be6d0ed73f3060ec77185d14e1d5e9e83805069818d25ee4b72267960f2e32fa6977dc1f2a11d0fba11cc28a828a9be576310d72c86c987b3235b8fc
+DIST genpatches-3.17-7.experimental.tar.xz 59940 SHA256 7c04ee99ad0aadce7e805bcbf3de3c45959428d3f4fff8c1028742f0d21a0f9c SHA512 7d4f124509c54413fefe6721ef147719da357425c9db0ce8f7ab5d8ca578f3955209e65d56e1447700923aa8ecd4c0563ee7ad899234f45bc1dc979bf61e6542 WHIRLPOOL 991b6b814652415080187c88a10b90ca8a7f46f28973b4ec3f465f8ce2def4264379fc980e0acbf08703c74d9c6134bc74921e9b961460d115e15e7807cb69dc
+DIST genpatches-3.17-7.extras.tar.xz 16156 SHA256 8c9e038c024cab108e1ea47692c5cd3538f57b69f9283a2c0c4219c49029271e SHA512 8c39b655704bea500252f08a555a07af7cfc21554f672accbe62fa46206deb25741f6f1878c31903beca20ba0d9cffe376a6ef127d0c321e99b654061ab9b446 WHIRLPOOL 25ea268ca91815b161927a68e4eda5762219b928f3bad903b3215a0156f460e06322eaca8a5e5ff8607a594d9bd5e3f06eb111bd4336493bf32d84b42fd76ef1
 DIST genpatches-3.4-87.base.tar.xz 1210220 SHA256 a2689a56e567805b5ed8e842c692c0cfded629bf2958ecc171b1d1ae3e5496b4 SHA512 ece2ab756f83101cfca81f4b7fff3335336428dbc4b98915c6526801c2051f961d0cf88dd3b9e6a1b925d758e379346ed913efbf8328f7108769588630d9fd60 WHIRLPOOL 0945380bd8df7772f42cefe970779a4f6cda42d77aa25f3043d34837729161bef15018daa96104872661c2171f7af6d2eccdfae2faa91bf29509f8a5190901c3
 DIST genpatches-3.4-87.extras.tar.xz 18208 SHA256 d1ffb428d8e9c3553dbc0bf078fc3b7d4c6f8d27e0e0fa5dd71385d84549a9fb SHA512 823a35f8e140b2553dbb8b8dad20dd100db80699bf0ac94b42f8b194141ed44f79ca69ce88ef343c2c9332568cabdb8281331fa5235d8da4d3a855bf4a3b230a WHIRLPOOL 95d5ac7047e14940c3e774a9694e344f114e135b74d3e43b0cf5a2da173c08594b2daa78d28aabd4b1c9fb8e29019e8111a51a19243f0a206c4f7abbf9e43f22
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
